refactor: 자동차 움직임 로직 수정